--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -10,6 +10,7 @@
     />
     <meta name="generator" content="Hugo 0.88.1" />
     <title>About Us</title>
+    <link rel="icon" href="wave.svg" />
     <link
       rel="canonical"
       href="https://getbootstrap.com/docs/5.1/examples/cover/"
@@ -82,7 +83,7 @@
           <h1 id="hTeam">Our Team</h1>
           <br />
           <h5 id="pTeam">
-            "We are a team based out of Maryland and are a team of people who
+            "We are a team based out of East Coast and are a team of people who
             believe in presenting issues in a Beautiful and Simple form."
             <br />
             <br />
