--- a/templates/mla.html
+++ b/templates/mla.html
@@ -14,6 +14,7 @@
       rel="canonical"
       href="https://getbootstrap.com/docs/5.1/examples/cover/"
     />
+    <link rel="icon" href="wave.svg" />
 
     <!-- Bootstrap core CSS -->
     <link
@@ -130,7 +131,10 @@
               <td>"Start With Ten Impactful Actions"</td>
               <td>Unknown Date</td>
               <td>
-                <a href="www.un.org/node/143154#unplug" class="link-dark">
+                <a
+                  href="https://www.un.org/node/143154#unplug"
+                  class="link-dark"
+                >
                   UN.org
                 </a>
               </td>
