--- a/templates/problem.html
+++ b/templates/problem.html
@@ -14,6 +14,7 @@
       rel="canonical"
       href="https://getbootstrap.com/docs/5.1/examples/cover/"
     />
+    <link rel="icon" href="wave.svg">
 
     <!-- Bootstrap core CSS -->
     <link
