--- a/templates/solution.html
+++ b/templates/solution.html
@@ -14,7 +14,7 @@
       rel="canonical"
       href="https://getbootstrap.com/docs/5.1/examples/cover/"
     />
-
+    <link rel="icon" href="wave.svg">
     <!-- Bootstrap core CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
