--- a/templates/mla.html
+++ b/templates/mla.html
@@ -9,12 +9,12 @@
       content="Mark Otto, Jacob Thornton, Kiet Lai, and Bootstrap contributors"
     />
     <meta name="generator" content="Hugo 0.88.1" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.svg" />
     <title>Citations</title>
     <link
       rel="canonical"
       href="https://getbootstrap.com/docs/5.1/examples/cover/"
     />
-    <link rel="icon" href="wave.svg" />
 
     <!-- Bootstrap core CSS -->
     <link
