--- a/templates/problem.html
+++ b/templates/problem.html
@@ -10,6 +10,7 @@
     />
     <meta name="generator" content="Hugo 0.88.1" />
     <title>Problem</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.svg">
     <link
       rel="canonical"
       href="https://getbootstrap.com/docs/5.1/examples/cover/"
