--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,11 @@
     />
     <meta name="generator" content="Hugo 0.88.1" />
     <title>Home</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.svg" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="../templates/images/favicon.svg"
+    />
     <link
       rel="canonical"
       href="https://getbootstrap.com/docs/5.1/examples/cover/"
