Updated for rick roll
It is a rick roll

--- a/templates/home.html
+++ b/templates/home.html
@@ -84,12 +84,12 @@
         </h2>
         <p class="lead">
           <a
-            href="/problem"
+            href="https://www.youtube.com/watch?v=X_8Nh5XfRw0"
             class="btn btn-lg btn-outline-secondary fw-bold border-white bg-black"
             >The Problem</a
           >
           <a
-            href="/solutions"
+            href="https://www.youtube.com/watch?v=X_8Nh5XfRw0"
             class="btn btn-lg btn-outline-secondary fw-bold border-white bg-black"
             >The Solutions</a
           >
